Changelog for fastField

fastField 1.4.0-pl
-------------------
- More compatibility with original modParser
- Finds TVs without .tv prefix.
- Sanitize Global arrays
- Some small fixes


fastField 1.3.1-pl
-------------------
- Fix problem with uninstallation

fastField 1.3.0-pl
-------------------
- Totally replace modParser by fastFieldParser
- Cache resource fields

fastField 1.2.1-pl
-------------------
- Fix null-field issue
- Fix error logs for TV

fastField 1.2.0-pl
-------------------
- More complex tag processing: nesting, caching and all features of resource fields;
- Global arrays support;
- Error logs for unknown fields and non-existent resources.

fastField 1.1.0-pl
-------------------
- Add processing output filters as default tags do. For example, [[#3.pagetitle:ucase:default=`[[*pagetitle:ucase]]`]]

fastField 1.0.0-pl
-------------------
Initial Version


